[package]
name = "fe3h"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
once_cell = "1.17.0"
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
